--- a/naptar.html
+++ b/naptar.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HFS European Tour 2026</title>
-    <link rel="stylesheet" href="https://github.com/lazarluca2001/hfs/blob/7a1c3bff73d0a18f1d641e8cf9b8b12fdf8e3c58/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -44,7 +44,8 @@
     </main>
 </div>
 
-<script src="https://github.com/lazarluca2001/hfs/blob/7a1c3bff73d0a18f1d641e8cf9b8b12fdf8e3c58/script.js"></script>
+<script src="script.js"></script>
 </body>
 
 </html>
+
