--- a/index.html
+++ b/index.html
@@ -5,149 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HFS - Dance With Us</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet">
-    <style>
-        :root {
-            --text-color: #ffffff;
-            --accent-color: #800000; /* A naptáradból ismert HFS bordó */
-            --overlay: rgba(0, 0, 0, 0.3);
-        }
-
-        body, html {
-            margin: 0;
-            padding: 0;
-            width: 100%;
-            height: 100%;
-            font-family: 'Montserrat', sans-serif;
-            overflow: hidden;
-        }
-
-        /* Háttérkép beállítása */
-        .hero-section {
-            background: linear-gradient(var(--overlay), var(--overlay)), 
-                        url('https://images.unsplash.com/photo-1508700115892-45ecd05ae2ad?auto=format&fit=crop&q=80&w=2070'); 
-            background-size: cover;
-            background-position: center;
-            height: 100vh;
-            display: flex;
-            flex-direction: column;
-            color: var(--text-color);
-        }
-
-        /* Navigációs sáv */
-        nav {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 30px 50px;
-            z-index: 10;
-        }
-
-        .logo {
-            font-size: 1.5rem;
-            font-weight: 900;
-            letter-spacing: 2px;
-            text-transform: uppercase;
-        }
-
-        .nav-links {
-            display: flex;
-            gap: 30px;
-        }
-
-        .nav-links a {
-            color: var(--text-color);
-            text-decoration: none;
-            text-transform: uppercase;
-            font-size: 0.9rem;
-            font-weight: 700;
-            letter-spacing: 1px;
-            transition: opacity 0.3s;
-        }
-
-        .nav-links a:hover {
-            opacity: 0.7;
-        }
-
-        /* Fő tartalom */
-        .content {
-            flex: 1;
-            display: flex;
-            align-items: center;
-            padding: 0 10%;
-            position: relative;
-        }
-
-        .main-text {
-            max-width: 600px;
-        }
-
-        .sub-title {
-            font-size: 1.2rem;
-            margin-bottom: 10px;
-            text-transform: uppercase;
-            letter-spacing: 4px;
-        }
-
-        h1 {
-            font-size: 5rem;
-            line-height: 1.1;
-            margin: 0;
-            font-weight: 900;
-            text-transform: uppercase;
-        }
-
-        .description {
-            margin-top: 20px;
-            font-size: 1rem;
-            line-height: 1.6;
-            opacity: 0.8;
-            max-width: 400px;
-        }
-
-        .cta-button {
-            display: inline-block;
-            margin-top: 30px;
-            padding: 12px 30px;
-            border: 2px solid var(--text-color);
-            color: var(--text-color);
-            text-decoration: none;
-            text-transform: uppercase;
-            font-weight: 700;
-            letter-spacing: 2px;
-            transition: all 0.3s;
-        }
-
-        .cta-button:hover {
-            background-color: var(--text-color);
-            color: #000;
-        }
-
-        /* Jobb oldali nagy függőleges felirat a kép alapján */
-        .side-title {
-            position: absolute;
-            right: 5%;
-            top: 50%;
-            transform: translateY(-50%);
-            font-size: 8rem;
-            font-weight: 900;
-            opacity: 0.2;
-            line-height: 0.8;
-            text-align: right;
-            pointer-events: none;
-        }
-
-        @media (max-width: 768px) {
-            h1 { font-size: 3rem; }
-            .side-title { display: none; }
-            nav { padding: 20px; flex-direction: column; gap: 20px; }
-            .nav-links { gap: 15px; font-size: 0.7rem; }
-        }
-    </style>
+    
+    <link href="./style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
 
     <div class="hero-section">
-        <nav>
+        <nav class="landing-nav">
             <div class="logo">HFS Crew</div>
             <div class="nav-links">
                 <a href="#">Tagok</a>
@@ -158,7 +22,7 @@
             </div>
         </nav>
 
-        <main class="content">
+        <main class="landing-content">
             <div class="main-text">
                 <div class="sub-title">European Tour 2026</div>
                 <h1>DANCE<br>WITH US</h1>
@@ -174,5 +38,6 @@
         </main>
     </div>
 
+    <script src="script.js" type="text/javascript"></script>>
 </body>
 </html>
