--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HFS - Dance With Us</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet">
-    
     <link href="./style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
@@ -23,21 +22,12 @@
         </nav>
 
         <main class="landing-content">
-            <div class="main-text">
-                <div class="sub-title">European Tour 2026</div>
-                <h1>DANCE<br>WITH US</h1>
-                <p class="description">
-                    Csatlakozz Európa egyik legdinamikusabb tánccsapatához. Fedezd fel a turné állomásait és légy részese az élménynek.
-                </p>
-                <a href="naptar.html" class="cta-button">Turnéterv</a>
-            </div>
-
             <div class="side-title">
                 DANCE<br>WITH<br>US
             </div>
         </main>
     </div>
 
-    <script src="script.js" type="text/javascript"></script>>
+    <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
