--- a/naptar.html
+++ b/naptar.html
@@ -6,10 +6,13 @@
     <title>HFS European Tour 2026</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="calendar-page">
 
 <div class="main-layout">
     <aside class="sidebar">
+        <a href="index.html" style="text-decoration: none; color: var(--hfs-red); font-size: 0.8em; font-weight: bold; margin-bottom: 10px; display: block;">
+    ❮ VISSZA A FŐOLDALRA
+</a>
         <h1 class="sidebar-logo">HFS 2026</h1>
         <div class="sidebar-card">
             <h3>KÖVETKEZŐ ÁLLOMÁS</h3>
@@ -48,4 +51,5 @@
 </body>
 
 </html>
+
 
