--- a/naptar.html
+++ b/naptar.html
@@ -11,10 +11,9 @@
 
 <div class="main-layout">
     <aside class="sidebar">
-        <a href="index.html" style="text-decoration: none; color: var(--hfs-red); font-size: 0.8em; font-weight: bold; margin-bottom: 10px; display: block;">
+        <a href="index.html" class="fff">
     ❮ VISSZA A FŐOLDALRA
 </a>
-        <h1 class="sidebar-logo">HFS 2026</h1>
         <div class="sidebar-card">
             <h3>KÖVETKEZŐ ÁLLOMÁS</h3>
             <div id="nextEventContent" class="text-content">Betöltés...</div>
@@ -52,6 +51,7 @@
 </body>
 
 </html>
+
 
 
 
