--- a/naptar.html
+++ b/naptar.html
@@ -11,7 +11,7 @@
 
 <div class="main-layout">
     <aside class="sidebar">
-        <a href="index.html" class="fff">
+        <a href="index.html" class="sidebar-link">
     ❮ VISSZA A FŐOLDALRA
 </a>
         <div class="sidebar-card">
@@ -51,6 +51,7 @@
 </body>
 
 </html>
+
 
 
 
