--- a/naptar.html
+++ b/naptar.html
@@ -17,6 +17,12 @@
         <div class="sidebar-card">
             <h3>KÖVETKEZŐ ÁLLOMÁS</h3>
             <div id="nextEventContent" class="text-content">Betöltés...</div>
+            <hr style="border: 0; border-top: 1px solid var(--border-color); margin: 10px 0;">
+            <div id="weatherContent" style="font-size: 0.85em;">
+                <p style="margin: 0; opacity: 0.7;">Időjárás:</p>
+                <div id="weatherForecast" style="display: flex; flex-direction: column; gap: 8px; margin-top: 5px;">
+                </div>
+            </div>
         </div>
         <div class="sidebar-card">
             <h3>TAGOK SZŰRÉSE</h3>
@@ -51,6 +57,7 @@
 </body>
 
 </html>
+
 
 
 
