--- a/naptar.html
+++ b/naptar.html
@@ -23,6 +23,11 @@
             <h3>TAGOK SZŰRÉSE</h3>
             <div id="memberFilter" class="member-filter"></div>
         </div>
+        <div class="sidebar-card">
+            <h3>AKTIVITÁS 2026</h3>
+            <div id="activityChart" class="activity-chart-container">
+            </div>
+        </div>
         <div class="theme-switch-wrapper">
             <span>Sötét mód</span>
             <label class="theme-switch">
@@ -52,6 +57,7 @@
 </body>
 
 </html>
+
 
 
 
