--- a/naptar.html
+++ b/naptar.html
@@ -9,15 +9,18 @@
 </head>
 <body class="calendar-page">
 
+<div class="fixed-nav">
+    <a href="index.html" class="sidebar-link">❮ FŐOLDAL</a>
+    <div class="theme-switch-wrapper">
+        <label class="theme-switch">
+            <input type="checkbox" id="checkbox">
+            <span class="slider"></span>
+        </label>
+    </div>
+</div>
+
 <div class="main-layout">
     <aside class="sidebar">
-        <a href="index.html" class="sidebar-link">❮ FŐOLDAL</a>
-        <div class="theme-switch-wrapper">
-            <label class="theme-switch">
-                <input type="checkbox" id="checkbox">
-                <span class="slider"></span>
-            </label>
-        </div>
         <div class="sidebar-card">
             <h3>KÖVETKEZŐ ÁLLOMÁS</h3>
             <div id="nextEventContent" class="text-content">Betöltés...</div>
@@ -53,6 +56,7 @@
 </body>
 
 </html>
+
 
 
 
