--- a/naptar.html
+++ b/naptar.html
@@ -10,7 +10,10 @@
 <body class="calendar-page">
 
 <div class="fixed-nav">
-    <a href="index.html" class="sidebar-link">❮ FŐOLDAL</a>
+    <div class="nav-left">
+        <a href="index.html" class="sidebar-link">❮ FŐOLDAL</a>
+        <button id="sidebarToggle" class="filter-toggle-btn">🔍 SZŰRŐK</button>
+    </div>
     <div class="theme-switch-wrapper">
         <label class="theme-switch">
             <input type="checkbox" id="checkbox">
@@ -56,6 +59,7 @@
 </body>
 
 </html>
+
 
 
 
