--- a/naptar.html
+++ b/naptar.html
@@ -2,72 +2,59 @@
 <html lang="hu">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HFS European Tour 2026</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="calendar.css">
 </head>
+
 <body class="calendar-page">
 
 <div class="fixed-nav">
     <div class="nav-left">
-        <a href="index.html" class="sidebar-link">❮ FŐOLDAL</a>
+        <a href="index.html">❮ FŐOLDAL</a>
         <button id="sidebarToggle" class="filter-toggle-btn">🔍 SZŰRŐK</button>
     </div>
-    <div class="theme-switch-wrapper">
-        <label class="theme-switch">
-            <input type="checkbox" id="checkbox">
-            <span class="slider"></span>
-        </label>
-    </div>
+
+    <label class="theme-switch">
+        <input type="checkbox" id="checkbox">
+        <span class="slider"></span>
+    </label>
 </div>
 
 <div class="main-layout">
+
     <aside class="sidebar">
         <div class="sidebar-card">
             <h3>KÖVETKEZŐ ÁLLOMÁS</h3>
-            <div id="nextEventContent" class="text-content">Betöltés...</div>
+            <div id="nextEventContent">Betöltés...</div>
         </div>
+
         <div class="sidebar-card">
             <h3>TAGOK SZŰRÉSE</h3>
             <div id="memberFilter" class="member-filter"></div>
         </div>
+
         <div class="sidebar-card">
             <h3>AKTIVITÁS 2026</h3>
-            <div id="activityChart" class="activity-chart-container">
-            </div>
+            <div id="activityChart"></div>
         </div>
     </aside>
 
     <main class="calendar-section">
         <div class="month-display-container">
-            <div class="month-title-group">
-                <button class="nav-btn" onclick="changeMonth(-1)">❮</button>
-                <h2 id="currentMonthHeader" class="month-display"></h2>
-                <button class="nav-btn" onclick="changeMonth(1)">❯</button>
-            </div>
-            <div class="controls-row">
-                <button class="today-btn" onclick="goToToday()">Ma</button>
-                <select id="monthSelect"></select>
-            </div>
+            <button onclick="changeMonth(-1)">❮</button>
+            <h2 id="currentMonthHeader"></h2>
+            <button onclick="changeMonth(1)">❯</button>
+            <button onclick="goToToday()">Ma</button>
+            <select id="monthSelect"></select>
         </div>
+
         <div id="calendar" class="calendar-grid"></div>
     </main>
+
 </div>
 
 <script src="script.js"></script>
 </body>
-
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
