calendar footer space

--- a/naptar.html
+++ b/naptar.html
@@ -57,10 +57,13 @@
         </div>
 
         <div id="calendar" class="calendar-grid"></div>
+        
+        <div class="calendar-footer-spacer"></div>
     </main>
 </div>
 
 <script src="script.js"></script>
 </body>
 </html>
+
 
