--- a/naptar.html
+++ b/naptar.html
@@ -2,6 +2,7 @@
 <html lang="hu">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>HFS European Tour 2026</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="calendar.css">
@@ -63,6 +64,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
