Change Dominguez Zoltán's division to Intermediate

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         { name: "Bende Márton", div: "Novice", points: 15 },
         { name: "Angyal Mercédesz", div: "Novice", points: 4 },
         { name: "Lázár Luca", div: "Novice", points: 0 },
-        { name: "Dominguez Zoltán", div: "Novice", points: 0 }
+        { name: "Dominguez Zoltán", div: "Intermediate", points: 0 }
     ];
 
     const rules = {
