Change label from 'Indulók' to 'Indulók (párok)'

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             <select id="compEvent"></select>
         </div>
         <div>
-            <label>Indulók</label>
+            <label>Indulók (párok)</label>
             <input type="number" id="competitorCount" placeholder="Pl. 35" oninput="updateTierInfo()">
         </div>
     </div>
